--- a/AnalongSamplingServer/AnalongSamplingServer.csproj
+++ b/AnalongSamplingServer/AnalongSamplingServer.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,7 +45,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClipboardDataSink.cs" />
     <Compile Include="DataSource.cs" />
+    <Compile Include="HighSpeedTimer.cs" />
     <Compile Include="IDataSink.cs" />
     <Compile Include="ParsedArguments.cs" />
     <Compile Include="Program.cs" />
