--- a/AnalongSamplingServer/AnalongSamplingServer.csproj
+++ b/AnalongSamplingServer/AnalongSamplingServer.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -49,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClipboardDataSink.cs" />
+    <Compile Include="ColorUtilities.cs" />
     <Compile Include="DataSource.cs" />
     <Compile Include="HighSpeedTimer.cs" />
     <Compile Include="IDataSink.cs" />
